# ilambda

./: .gitignore  Makefile  README.org  TODO.org  design-ideas.org  ilambda-elisp.el  ilambda.el  ilambda.hs  setup-haskell.sh
.lsp/.cache/: lock.mdb
clojure/: CHANGELOG.md  Makefile  README.md  project.clj
clojure/.lsp/.cache/: lock.mdb
clojure/doc/: intro.md
clojure/src/ilambda/: core.clj
common-lisp/: README.markdown  README.org  common-lisp.asd  ilambda.asd
common-lisp/src/: main.lisp
common-lisp/tests/: main.lisp
hs/: README.md  hs-simple.cabal  ilambda.cabal  package.yaml
hs-cabal/: .ghc.environment.x86_64-linux-8.10.4  CHANGELOG.md  TAGS  hs-cabal.cabal  ilambda-hs.cabal
hs-cabal/app/: Main.hs
hs-cabal/src/: Main.hs
hs-simple/: README.md  TAGS  hie-multi.yaml  hs-simple.cabal  stack.yaml
hs-simple/.stack-work/: stack.sqlite3
hs-simple/.stack-work/ghci/37923484/: cabal_macros.h
hs-simple/.stack-work/ghci/82b9b78a/: cabal_macros.h
hs-simple/.stack-work/ghci/8d42a1c2/: cabal_macros.h
hs-simple/.stack-work/ghci/aa80c48e/: cabal_macros.h
hs-simple/.stack-work/ghci/b14ca190/: cabal_macros.h
hs-simple/.stack-work/ghci/c3836a1b/: cabal_macros.h
hs-simple/.stack-work/odir/: Main.hi
hs-simple/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
hs-simple/src/: Main.hs
hs-stack/: ChangeLog.md  TAGS  ilambda.cabal  package.yaml  stack.yaml
hs-stack/src/: Lib.hs
hs/.stack-work/: stack.sqlite3
hs/app/: Main.hs
hs/src/: Lib.hs  Main.hs  README.org
(+676 files in other folders)
